# cat

./: .gitignore  .gitmodules  CMakeLists.txt  build-configurations.txt
cmake/: Linux-Clang.cmake  Linux-GCC.cmake  TargetArch.cmake  arch.c
inc/: newline.h  win32.h
lib/crt/: CrtLogic.cmake  CrtLogicPost.cmake  LegacyCRT.cmake  crt.c
lib/crt/cmake/: TargetArch.cmake
lib/crt/src/: CMakeLists.txt  _CrtLibrary.cmake  crt.c
lib/unicode/: CMakeLists.txt  unicode.c
lib/unicode/inc/: unicode.h
lib/unicode/lib/crt/: CrtLogic.cmake
lib/unicode/lib/crt/src/: msvcrt.def
lib/unicode/src/: dll.c
src/: cat.c  newline.c
test/: ansi.txt  utf16le.txt  utf8.txt
