SET(CMAKE_POLICY_DEFAULT_CMP0091 NEW) # CMAKE_MSVC_RUNTIME_LIBRARY
SET(CMAKE_POLICY_DEFAULT_CMP0092 NEW) # No MSVC warning flags in CMAKE_C_FLAGS
SET(CMAKE_POLICY_DEFAULT_CMP0184 NEW) # CMAKE_MSVC_RUNTIME_CHECKS variable
CMAKE_MINIMUM_REQUIRED(VERSION 2.6...4.2)
SET(CMAKE_ERROR_DEPRECATED ON)

### Define project and set CMake variables
PROJECT(CatProject C)
SET(CMAKE_C_STANDARD 90)
SET(CMAKE_C_STANDARD_REQUIRED ON)

### Project details and options
SET(EXECUTABLE_NAME cat)
SET(EXECUTABLE_SUBSYSTEM "CONSOLE")
OPTION(UNICODE_LIB "Use unicode library" ON)
OPTION(UNICODE_LIB_SHARED "Link to unicode library dynamically" OFF)

IF(NOT CMAKE_CURRENT_LIST_DIR)
    SET(CMAKE_CURRENT_LIST_DIR ${CMAKE_CURRENT_SOURCE_DIR}/lib/crt)
ENDIF(NOT CMAKE_CURRENT_LIST_DIR)
SET(CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/lib/crt ${CMAKE_MODULE_PATH})
INCLUDE(CrtLogic)

### Define sources
# Define include directory
INCLUDE_DIRECTORIES(inc)

# Add executable
ADD_EXECUTABLE(${EXECUTABLE_NAME} src/cat.c 
                                  src/newline.c
                                  ${GLOBAL_ADDITIONAL_SOURCES})

# Set executable properties
SET_TARGET_PROPERTIES(${EXECUTABLE_NAME} PROPERTIES 
    COMPILE_FLAGS "${GLOBAL_COMPILE_FLAGS} ${EXECUTABLE_COMPILE_FLAGS}"
    LINK_FLAGS "${GLOBAL_LINK_FLAGS} ${EXECUTABLE_LINK_FLAGS}"
)

# Add unicode library
IF(UNICODE_LIB)
    ADD_DEFINITIONS(-DUNICODE_LIB)
    IF(UNICODE_LIB_SHARED)
        ADD_DEFINITIONS(-DUNICODE_LIB_SHARED)
    ENDIF(UNICODE_LIB_SHARED)
    ADD_SUBDIRECTORY(lib/unicode)
    ADD_DEPENDENCIES(${EXECUTABLE_NAME} unicode)
    TARGET_LINK_LIBRARIES(${EXECUTABLE_NAME} unicode)
ENDIF(UNICODE_LIB)

# Additional dependencies (e.g. the crt) should strictly appear at the very end for ld to work
IF(EXECUTABLE_DEPENDENCIES)
    ADD_DEPENDENCIES(${EXECUTABLE_NAME} ${EXECUTABLE_DEPENDENCIES})
ENDIF(EXECUTABLE_DEPENDENCIES)
IF(GLOBAL_ADDITIONAL_LIBRARIES)
    TARGET_LINK_LIBRARIES(${EXECUTABLE_NAME} ${GLOBAL_ADDITIONAL_LIBRARIES})
ENDIF(GLOBAL_ADDITIONAL_LIBRARIES)

INCLUDE(CrtLogicPost)