SET(CMAKE_POLICY_DEFAULT_CMP0091 NEW) # CMAKE_MSVC_RUNTIME_LIBRARY
SET(CMAKE_POLICY_DEFAULT_CMP0092 NEW) # No MSVC warning flags in CMAKE_C_FLAGS
SET(CMAKE_POLICY_DEFAULT_CMP0184 NEW) # CMAKE_MSVC_RUNTIME_CHECKS variable
set(CMAKE_C_STANDARD_LIBRARIES "" CACHE INTERNAL "") # Don't add libraries by default
CMAKE_MINIMUM_REQUIRED(VERSION 2.6...4.2)
SET(CMAKE_ERROR_DEPRECATED ON)

### Define project and set CMake variables
PROJECT(CatProject C)
SET(CMAKE_C_STANDARD 90)
SET(CMAKE_C_STANDARD_REQUIRED ON)
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin")
SET(EXECUTABLE_OUTPUT_PATH "${CMAKE_BINARY_DIR}/bin")
SET(LIBRARY_OUTPUT_PATH "${CMAKE_BINARY_DIR}/bin")

### Project details and options
SET(EXECUTABLE_NAME cat)
SET(EXECUTABLE_IS_CONSOLE ON)
OPTION(UNICODE_LIB "Use unicode library" ON)
OPTION(UNICODE_LIB_SHARED "Link to unicode library dynamically" OFF)
OPTION(WIN32_LEGACY "Build using legacy CRTs" ON)

### Add CRT
IF(WIN32 AND WIN32_LEGACY)
    SET(CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/lib/crt ${CMAKE_MODULE_PATH})
    INCLUDE(LegacyCRT)
    ADD_LEGACY_CRT(${CMAKE_CURRENT_SOURCE_DIR}/lib/crt)
ENDIF(WIN32 AND WIN32_LEGACY)

### Define sources
# Define include directory
INCLUDE_DIRECTORIES(inc)

# Add executable
SET(EXECUTABLE_SOURCES src/cat.c src/newline.c)
IF(WIN32 AND WIN32_LEGACY)
    ADD_LEGACY_CRT_EXECUTABLE(${EXECUTABLE_NAME} ${EXECUTABLE_IS_CONSOLE} ${EXECUTABLE_SOURCES})
ELSE(WIN32 AND WIN32_LEGACY)
    ADD_EXECUTABLE(${EXECUTABLE_NAME} ${EXECUTABLE_SOURCES})
ENDIF(WIN32 AND WIN32_LEGACY)

# Add unicode library
IF(UNICODE_LIB)
    ADD_DEFINITIONS(-DUNICODE_LIB)
    IF(UNICODE_LIB_SHARED)
        ADD_DEFINITIONS(-DUNICODE_LIB_SHARED)
    ENDIF(UNICODE_LIB_SHARED)
    SET(unicode_SHARED ${UNICODE_LIB_SHARED} CACHE INTERNAL "" FORCE)
    ADD_SUBDIRECTORY(lib/unicode)
    ADD_DEPENDENCIES(${EXECUTABLE_NAME} unicode)
    TARGET_LINK_LIBRARIES(${EXECUTABLE_NAME} unicode)
ENDIF(UNICODE_LIB)
