SET(LIBRARY_NAME unicode)
SET(${LIBRARY_NAME}_SHARED ${UNICODE_LIB_SHARED})

SET(${LIBRARY_NAME}_COMPILE_FLAGS "${GLOBAL_COMPILE_FLAGS}")
SET(${LIBRARY_NAME}_LINK_FLAGS "${GLOBAL_LINK_FLAGS}")
IF(${LIBRARY_NAME}_SHARED)
    ADD_DEFINITIONS(-DUNICODE_EXPORT)
    SET(SHARED_FLAG "SHARED")
    SET(SHARED_SRC "src/dll.c")
    SET(${LIBRARY_NAME}_COMPILE_FLAGS "${${LIBRARY_NAME}_COMPILE_FLAGS} ${DLL_COMPILE_FLAGS}")
    # disable unreferenced formal parameter warning
    IF(MSVC)
        SET(${LIBRARY_NAME}_COMPILE_FLAGS "${${LIBRARY_NAME}_COMPILE_FLAGS} /wd4100")
    ENDIF(MSVC)
    SET(${LIBRARY_NAME}_LINK_FLAGS "${${LIBRARY_NAME}_LINK_FLAGS} ${DLL_LINK_FLAGS}")
ELSE(${LIBRARY_NAME}_SHARED)
    SET(SHARED_FLAG "STATIC")
    SET(SHARED_SRC "")
ENDIF(${LIBRARY_NAME}_SHARED)
INCLUDE_DIRECTORIES(inc)
ADD_LIBRARY(${LIBRARY_NAME} ${SHARED_FLAG} src/unicode.c ${SHARED_SRC} ${GLOBAL_ADDITIONAL_SOURCES})
SET_TARGET_PROPERTIES(${LIBRARY_NAME} PROPERTIES
    COMPILE_FLAGS "${${LIBRARY_NAME}_COMPILE_FLAGS}"
    LINK_FLAGS "${${LIBRARY_NAME}_LINK_FLAGS}"
)
IF(GLOBAL_ADDITIONAL_LIBRARIES)
    TARGET_LINK_LIBRARIES(${LIBRARY_NAME} ${GLOBAL_ADDITIONAL_LIBRARIES})
ENDIF(GLOBAL_ADDITIONAL_LIBRARIES)

IF(${LIBRARY_NAME}_SHARED AND DLL_DEPENDENCIES)
    ADD_DEPENDENCIES(${LIBRARY_NAME} ${DLL_DEPENDENCIES})
ENDIF(${LIBRARY_NAME}_SHARED AND DLL_DEPENDENCIES)