SET(CMAKE_POLICY_DEFAULT_CMP0091 NEW) # CMAKE_MSVC_RUNTIME_LIBRARY
SET(CMAKE_POLICY_DEFAULT_CMP0092 NEW) # No MSVC warning flags in CMAKE_C_FLAGS
SET(CMAKE_POLICY_DEFAULT_CMP0184 NEW) # CMAKE_MSVC_RUNTIME_CHECKS variable
CMAKE_MINIMUM_REQUIRED(VERSION 2.6...4.2)
SET(CMAKE_ERROR_DEPRECATED ON)

### Define project and set CMake variables
PROJECT(UnicodeProject C)
SET(CMAKE_C_STANDARD 90)
SET(CMAKE_C_STANDARD_REQUIRED ON)

### Project details and options
SET(LIBRARY_NAME unicode)
OPTION(${LIBRARY_NAME}_SHARED "Create a shared library" OFF)
OPTION(WIN32_LEGACY "Build using legacy CRTs" ON)

### Add CRT
IF(WIN32 AND WIN32_LEGACY)
    SET(CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/lib/crt ${CMAKE_MODULE_PATH})
    INCLUDE(CrtLogic)
    ADD_CRT(${CMAKE_CURRENT_SOURCE_DIR}/lib/crt)
ENDIF(WIN32 AND WIN32_LEGACY)

SET(${LIBRARY_NAME}_COMPILE_FLAGS "${GLOBAL_COMPILE_FLAGS}")
SET(${LIBRARY_NAME}_LINK_FLAGS "${GLOBAL_LINK_FLAGS}")
IF(${LIBRARY_NAME}_SHARED)
    ADD_DEFINITIONS(-DUNICODE_EXPORT)
    SET(SHARED_FLAG "SHARED")
    IF(WIN32)
        SET(SHARED_SRC "src/dll.c")
    ENDIF(WIN32)
    SET(${LIBRARY_NAME}_COMPILE_FLAGS "${${LIBRARY_NAME}_COMPILE_FLAGS} ${DLL_COMPILE_FLAGS}")
    # disable unreferenced formal parameter warning
    IF(MSVC)
        SET(${LIBRARY_NAME}_COMPILE_FLAGS "${${LIBRARY_NAME}_COMPILE_FLAGS} /wd4100")
    ENDIF(MSVC)
    SET(${LIBRARY_NAME}_LINK_FLAGS "${${LIBRARY_NAME}_LINK_FLAGS} ${DLL_LINK_FLAGS}")
ELSE(${LIBRARY_NAME}_SHARED)
    SET(SHARED_FLAG "STATIC")
    SET(SHARED_SRC "")
ENDIF(${LIBRARY_NAME}_SHARED)
INCLUDE_DIRECTORIES(inc)
ADD_LIBRARY(${LIBRARY_NAME} ${SHARED_FLAG} src/unicode.c ${SHARED_SRC} ${GLOBAL_ADDITIONAL_SOURCES})
SET_TARGET_PROPERTIES(${LIBRARY_NAME} PROPERTIES
    COMPILE_FLAGS "${${LIBRARY_NAME}_COMPILE_FLAGS}"
    LINK_FLAGS "${${LIBRARY_NAME}_LINK_FLAGS}"
)
IF(GLOBAL_ADDITIONAL_LIBRARIES)
    TARGET_LINK_LIBRARIES(${LIBRARY_NAME} ${GLOBAL_ADDITIONAL_LIBRARIES})
ENDIF(GLOBAL_ADDITIONAL_LIBRARIES)

IF(${LIBRARY_NAME}_SHARED AND DLL_DEPENDENCIES)
    ADD_DEPENDENCIES(${LIBRARY_NAME} ${DLL_DEPENDENCIES})
ENDIF(${LIBRARY_NAME}_SHARED AND DLL_DEPENDENCIES)