SET(CMAKE_POLICY_DEFAULT_CMP0091 NEW) # CMAKE_MSVC_RUNTIME_LIBRARY
SET(CMAKE_POLICY_DEFAULT_CMP0092 NEW) # No MSVC warning flags in CMAKE_C_FLAGS
SET(CMAKE_POLICY_DEFAULT_CMP0184 NEW) # CMAKE_MSVC_RUNTIME_CHECKS variable
CMAKE_MINIMUM_REQUIRED(VERSION 2.6...4.2)
SET(CMAKE_ERROR_DEPRECATED ON)

### Define project and set CMake variables
PROJECT(UnicodeProject C)
SET(CMAKE_C_STANDARD 90)
SET(CMAKE_C_STANDARD_REQUIRED ON)

### Project details and options
SET(LIBRARY_NAME unicode)
SET(LIBRARY_IS_CONSOLE ON)
OPTION(${LIBRARY_NAME}_SHARED "Create a shared library" OFF)
OPTION(WIN32_LEGACY "Build using legacy CRTs" ON)

### Add CRT
#IF(WIN32 AND WIN32_LEGACY)
#    SET(CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/lib/crt ${CMAKE_MODULE_PATH})
#    INCLUDE(CrtLogic)
#    ADD_CRT(${CMAKE_CURRENT_SOURCE_DIR}/lib/crt)
#ENDIF(WIN32 AND WIN32_LEGACY)

INCLUDE_DIRECTORIES(inc)

SET(${LIBRARY_NAME}_SOURCES src/unicode.c)
SET(${LIBRARY_NAME}_COMPILE_DEFINITIONS "")
SET(${LIBRARY_NAME}_COMPILE_FLAGS "")
SET(${LIBRARY_NAME}_LINK_FLAGS "")

IF(${LIBRARY_NAME}_SHARED)
    LIST(APPEND ${LIBRARY_NAME}_COMPILE_DEFINITIONS "UNICODE_EXPORT")
    IF(MSVC AND NOT MSVC_VERSION LESS 1300)
        SET(${LIBRARY_NAME}_COMPILE_FLAGS "${${LIBRARY_NAME}_COMPILE_FLAGS} /wd4100")
    ENDIF(MSVC AND NOT MSVC_VERSION LESS 1300)
    IF(WIN32)
        LIST(APPEND ${LIBRARY_NAME}_SOURCES "src/dll.c")
    ENDIF(WIN32)
    IF(WIN32 AND WIN32_LEGACY)
        ADD_LEGACY_CRT_DLL(${LIBRARY_NAME} ${LIBRARY_IS_CONSOLE} ${${LIBRARY_NAME}_SOURCES})
    ELSE(WIN32 AND WIN32_LEGACY)
        ADD_LIBRARY(${LIBRARY_NAME} SHARED ${${LIBRARY_NAME}_SOURCES})
    ENDIF(WIN32 AND WIN32_LEGACY)
ELSE(${LIBRARY_NAME}_SHARED)
    IF(WIN32 AND WIN32_LEGACY)
        ADD_LEGACY_CRT_LIBRARY(${LIBRARY_NAME} ${LIBRARY_IS_CONSOLE} ${${LIBRARY_NAME}_SOURCES})
    ELSE(WIN32 AND WIN32_LEGACY)
        ADD_LIBRARY(${LIBRARY_NAME} STATIC ${${LIBRARY_NAME}_SOURCES})
    ENDIF(WIN32 AND WIN32_LEGACY)
ENDIF(${LIBRARY_NAME}_SHARED)

GET_TARGET_PROPERTY(_${LIBRARY_NAME}_COMPILE_FLAGS ${LIBRARY_NAME} COMPILE_FLAGS)
IF(NOT _${LIBRARY_NAME}_COMPILE_FLAGS)
    SET(_${LIBRARY_NAME}_COMPILE_FLAGS "")
ENDIF(NOT _${LIBRARY_NAME}_COMPILE_FLAGS)
GET_TARGET_PROPERTY(_${LIBRARY_NAME}_LINK_FLAGS ${LIBRARY_NAME} LINK_FLAGS)
IF(NOT _${LIBRARY_NAME}_LINK_FLAGS)
    SET(_${LIBRARY_NAME}_LINK_FLAGS "")
ENDIF(NOT _${LIBRARY_NAME}_LINK_FLAGS)
SET_TARGET_PROPERTIES(${LIBRARY_NAME} PROPERTIES
    COMPILE_DEFINITIONS "${${LIBRARY_NAME}_COMPILE_DEFINITIONS}"
    COMPILE_FLAGS "${_${LIBRARY_NAME}_COMPILE_FLAGS} ${${LIBRARY_NAME}_COMPILE_FLAGS}"
    LINK_FLAGS "${_${LIBRARY_NAME}_LINK_FLAGS} ${${LIBRARY_NAME}_LINK_FLAGS}"
)
